@@ -1,5 +1,10 @@
 2007-09-04  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* libstetic/wrapper/ComboBox.cs: Comboboxes are now of type Text by default.
+	  Fixes bug #81763.
+
+2007-09-04  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* libstetic/wrapper/Notebook.cs: Workaround for GTK bug. ShowAll is not
 	  propagated to tab labels. Fixes bug #82476.
 
